--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/jhernandez89/Nerdom#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "react-xml-parser": "^1.0.2",
     "redux-promise": "^0.5.3",
     "styled-components": "^2.2.3",
     "webpack": "^3.8.1",
